--- a/q/275493.html
+++ b/q/275493.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>018</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
-<tr d-ix="1"><td>025</td><td>Clojure</td><td>240913T195506Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275519#275519">Mitchell</a></td></tr>
-<tr d-ix="2"><td>057</td><td>Haskell</td><td>240913T184613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275518#275518">Antonio </a></td></tr>
+<tr d-ix="0"><td>045</td><td>Haskell</td><td>240913T184613Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275518#275518">Antonio </a></td></tr>
+<tr d-ix="1"><td>018</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
+<tr d-ix="2"><td>025</td><td>Clojure</td><td>240913T195506Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275519#275519">Mitchell</a></td></tr>
 <tr d-ix="3"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
 <tr d-ix="4"><td>027</td><td>C gcc</td><td>240913T135527Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275511#275511">jdt</a></td></tr>
 <tr d-ix="5"><td>009</td><td>K ngn/k</td><td>240913T130009Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275510#275510">ovs</a></td></tr>
@@ -39,7 +39,14 @@
 <tr d-ix="10"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
 <tr d-ix="11"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>19</s> 18 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>57</s>, 45 bytes</h1>
+
+<pre class="lang-hs prettyprint-override"><code>data U=U([Char]-&gt;IO U);f s=U$(&lt;$putStrLn s).f
+</code></pre>
+<p>I thought you needed an import to have access to an operator like <code>($&gt;)</code>, but I just found out that the flipped version <code>(&lt;$)</code> is already in the prelude.</p>
+<p><a href="https://tio.run/##y0gszk7Nyfn/PyWxJFEh1DZUI9o5I7EoVtfO018hVNM6TaHYNlRFw0aloLQkuKTIJ0@hWFMv7X9uYmaegq1CSj6XAhDkpJYoaIQqpGsChdIUlIoNlcDCECEbXYV0oJgRRAzENFb6DwA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>19</s> 18 bytes</h1>
 <pre><code>f@a_=f[Print@a;#]&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78/z/NITHeNi06oCgzr8Qh0Vo5Vu1/um2ag1KxoRJXum06kGEEYxgr/QcA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -54,16 +61,10 @@
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X9nAQUvDxcFBQ1lfL94@oCgzr8QhXtdORVNT7X@6bZqDUrGhEle6bTqQYQRjGCv9BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://clojure.org/" rel="nofollow noreferrer">Clojure</a>, 25 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://clojure.org/" rel="nofollow noreferrer">Clojure</a>, 25 bytes</h1>
 <pre><code>defn f[s]#(do(pr s)(f %))
 </code></pre>
 <p><a href="https://tio.run/##Pck7CoAwEEXR3lU8RoSZxg2JVf4hJJIoLj@mkJT3XJVKfKrp3LWxGfZo58q68FXRhC02kS4LjwmH0eRNSoXkNw92oLfUpKcFsAeZW@2TIjiAbMihDesf" rel="nofollow noreferrer" title="Clojure – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, 57 bytes</h1>
-
-<pre class="lang-hs prettyprint-override"><code>data U=U{u::[Char]-&gt;IO U};f=U$pure.U.(.u f).(*&gt;).putStrLn
-</code></pre>
-<p><a href="https://tio.run/##y0gszk7Nyfn/PyWxJFEh1Da0utTKKto5I7EoVtfO018htNY6zTZUpaC0KFUvVE9Dr1QhTVNPQ8tOU6@gtCS4pMgn739uYmaegq1CSj6XAhCkK9joKgBVKSgVGyohi6QDRYwgIhCOsdJ/AA" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu3" class="pu"><h1>Java, 85 bytes</h1>
 
