--- a/q/275514.html
+++ b/q/275514.html
@@ -26,12 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>079</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
-<tr d-ix="1"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
-<tr d-ix="2"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
-<tr d-ix="3"><td>035</td><td>Perl 5 + pF M5.10.0</td><td>240913T150923Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275515#275515">Dom Hast</a></td></tr>
+<tr d-ix="0"><td>080</td><td>C in an xterm</td><td>240914T140341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275532#275532">G. Sliep</a></td></tr>
+<tr d-ix="1"><td>079</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
+<tr d-ix="2"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
+<tr d-ix="3"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
+<tr d-ix="4"><td>035</td><td>Perl 5 + pF M5.10.0</td><td>240913T150923Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275515#275515">Dom Hast</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 79 bytes</h1>
+<div id="pu0" class="pu"><h1>C (in an xterm), 80 bytes</h1>
+<pre><code>l(char*s){puts(&quot;\e[2J\e[99B&quot;);for(;*s;)printf(&quot;/\e[A\0\e[B\\\0_&quot;+(1^*s++&amp;3)*5);}
+</code></pre>
+<p>Clears the terminal and draws a landscape at the bottom of the screen.</p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 79 bytes</h1>
 <p><em>-8 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a></em></p>
 <p>Expects an array of characters and returns a matrix of characters, with leading and/or trailing blank lines.</p>
 
@@ -40,7 +46,7 @@
 <p><a href="https://tio.run/##NY7BbsMgDIbveQrkQwUjJdN2aws77SkSVlmQtFQpRDAm5dJXT0O72pJ/f/59@C/4h8lEN/1ufbD9MsgFpWqFEMiRv2txxYnSYz0zqfABRiogTdcdoaXIP1nr5EdtFCT4mjnfzVvppDmsqDc3pxlb9m1FCGSoi9inpKfknGzONtl1vi7ZFnqhLZ3WgkpXYgjxG82ZJiIVMcGnMPZiDCc60BI5afaIGIsdxSU4TwEY@986D0zEfhrR9LT5IW@db07XmpQXttwB" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>(the test code includes some post-processing for readability)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Zilog_Z80" rel="nofollow noreferrer">Z80 Machine Code</a>, 39 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://en.wikipedia.org/wiki/Zilog_Z80" rel="nofollow noreferrer">Z80 Machine Code</a>, 39 bytes</h1>
 <pre><code>1AB7C81323FE552005362F250600FE44200524365C065FFE5320E5A0200624367E2518DC7018D9
 </code></pre>
 <p>Without the requirement for the <code>s</code> character being different based on whether it follows a <code>u</code> or <code>d</code>, the code can be gotten down to 27 bytes.</p>
@@ -89,7 +95,7 @@ drawLower:
 <p>There's no portable way to print stuff in Z80, but here's an example of the code in action:</p>
 <p><a href="https://i.sstatic.net/LR89POed.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/LR89POed.png" alt="screenshot of printed landscape" /></a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 33 bytes</h1>
 <pre><code>≔_θＦＳ≡ιsθd«Ｍ⁼θ_↓\≔_θ»«Ｍ⌕θ_↓/≔‾θ
 </code></pre>
 <p><a href="https://tio.run/##dY1LCsIwEIbXzSmGrBKouK8rQQUXguC2ICHpI1AS20naRSl4Mg/jRWJKQVFwM/C/vpG16KQVTQhbRF0ZRq80hZZvSGk7YEdz8@7iOm0qxjngoJ2sgWkOI5ECC6BIMzjH3LF5tHgqeiNJTrYv2L71okHWphDJPIVsZwcTm8kyonlOZ/X7fSKqKIVv3Id00Eb956y/MM/74w2aQvAelfcKVbxh1Tcv" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -113,7 +119,7 @@ drawLower:
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z8tv0hBwzOvoLQkuKQoMy9dQ1NTobg8syQ5Q0EjU1Ohmis5sThVQSlFyUohAChfoqEUkxcTo6RpDZUoRkjEg0RTUtMSS3NKYIJWoQVBmekZJToKSvog6dr//0tLi1NKS1OKU4Dkf92yHAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation: Depending on each input letter, the program either d) moves down a line, then prints a <code>\</code> s) prints a <code>_</code> or u) prints a <code>/</code>, then moves up a line. Annoyingly I can't seem to do anything about the multiple separators required between the strings which take up over 20% of my bytes.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pF -M5.10.0</code>, 35 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-pF -M5.10.0</code>, 35 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>say$/x@F;s/d/.\\/g;s!u!/.[A!g;y;s;_</code></pre>
 <p><a href="https://dom111.github.io/code-sandbox/#eyJsYW5nIjoid2VicGVybC01LjI4LjEiLCJjb2RlIjoic2F5JC94QEY7cy9kL1xmXFxcXC9nO3MhdSEvXHUwMDFiW0EhZzt5O3M7XyIsImFyZ3MiOiItcEZcbi1NNS4xMC4wIiwiaW5wdXQiOiJ1dXNkdXVkc2RkdXUifQ==" rel="nofollow noreferrer">Try it online!</a></p>
