--- a/q/275522.html
+++ b/q/275522.html
@@ -26,13 +26,33 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
-<tr d-ix="1"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
-<tr d-ix="2"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
-<tr d-ix="3"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
-<tr d-ix="4"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
+<tr d-ix="0"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
+<tr d-ix="2"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
+<tr d-ix="3"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
+<tr d-ix="4"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
+<tr d-ix="5"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
+<div id="pu0" class="pu"><h1>Haskell, 93 bytes</h1>
+<pre class="lang-hs prettyprint-override"><code>f=show.fst.foldl(#)(0,0)
+x#'.'=x$&gt;1
+(x,0)#y=(x/10+g y,0)
+(x,n)#y=(x+g y*10^n,n+1)
+g=read.pure
+</code></pre>
+<p><a href="https://tio.run/##bYy9DoIwFEZ3nuIGSASB2gJrnYyTm7tJI78RWlJKLE@PLTj2juec@3Vs/tTDsPXjJKSCG1MM3Rf@VkJuDZ078UXNrFAjhmqIgjjCKY49HZzQierwSrxIGxCsNNIXgpMWVusN5Ae05Ezwi6c8IbHXUlmzCk2LrLeR9RwoVMIDc9Oinko@OITQgE9yVJQ@ZBmURY6Io9j5Xuyto8Ak9w00hXth/4djwaELhP@6cFurrd1@" rel="nofollow noreferrer">Try it online!</a></p>
+<ul>
+<li><code>g</code> reads a character into a number</li>
+<li>the aggregating function <code>(#)</code> is called for each character of the string; It first argument is the accumulator, the second the current character. The accumulator is itself a tuple: the first element is the current result and the second starts at zero
+<ul>
+<li><code>(x,0)#y=(x/10+g y,0)</code> when we encounter a new digit we multiply by 0.1 the current result and add to it the new digit</li>
+<li><code>x#'.'=x$&gt;1</code> when we encounter the decimal point we retain the current result, but we set the second argument to 1, switching to decimal part mode</li>
+<li>in decimal part mode (<code>(x,n)#y=(x+g y*10^n,n+1)</code>) when we encounter a new digit we have to multiply it by (0.1)^-n (i.e. 10^n) where n is the number of digits after the decimal mark</li>
+</ul>
+</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
 <pre><code>nkŻœ|¥ɗ”.Ṛ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z8v@@juo5NrDi09Of1Rw1y9hztn/X@4Y9Ph9kdNa7z//zc00jM2UTAxNtIzVDAwNFIA0cZ6BiBsAAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -58,7 +78,7 @@ p              Pair element(s) of the input with '.'
           0    Print all that and return 0.
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Haskell, 85 bytes</h1>
+<div id="pu2" class="pu"><h1>Haskell, 85 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f x|elem '.'x=g x&quot;0&quot;|True=g(x++&quot;.&quot;)&quot;0&quot;
 g(x:'.':y)z=g y$x:'.':z
 g(x:y)z=g y$x:z
@@ -73,7 +93,7 @@ g[]z=z
 <li>with the guard <code>elem '.'x</code> we can add the decimal point to the input if it is missing</li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
 <pre><code>Ｉ⍘Ｓ·¹
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwymxODW4BMhP1/DMKygtgbI1dRQM9Aw1NTWt//83NNIzNvmvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -85,7 +105,7 @@ g[]z=z
 </code></pre>
 <p>When converting a string &quot;from&quot; a numeric base, Charcoal interprets the characters <code>0-9a-zA-Z</code> as integers from <code>0</code> to <code>61</code> and then computes the polynomial with the given input base.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
 <pre><code>$
 .
 D`\.
@@ -127,7 +147,7 @@ V`\..
 </code></pre>
 <p><a href="https://tio.run/##K0otycxLNPyvH5OirRGjByQ17fXjNdwT/qtw6XG5JMTocYUlAFGMnh5XjJ4K1///hkZ6xiYKNrZ2CibGRnqGXAaGRmAeiG2sZwBmA2kDAA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link is to test suite that converts any match of <code>/\d+(\.\d+)?/</code> in the input.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
 <pre><code>\./0J2Ẏ÷$ṫ$\0∴WRIṠ\.j
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiXFwuLzBKMuG6jsO3JOG5qyRcXDDiiLRXUknhuaBcXC5qIiwiIiwiXCIxOFwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
