--- a/q/275522.html
+++ b/q/275522.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>065</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
+<tr d-ix="0"><td>062</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
 <tr d-ix="1"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
 <tr d-ix="2"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
 <tr d-ix="3"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
@@ -34,14 +34,12 @@
 <tr d-ix="5"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="6"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, 65 bytes</h1>
-<pre class="lang-haskell prettyprint-override"><code>(#&quot;0&quot;)
-(h:'.':t)#s=reverse t++h:'.':s
-(h:t)#s=t#(h:s)
-_#s=&quot;0.&quot;++s
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>65</s> 62 bytes</h1>
+<pre class="lang-haskell prettyprint-override"><code>g.reverse
+g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b++&quot;0&quot;|0&lt;1=&quot;0.&quot;++s
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ0W0km5yQYFS7OI025ilpSVpuhY3HTWUlQyUNLk0MqzU9dStSjSVi22LUstSi4pTFUq0tSGixSBpsFSJMpBVrMkVD2QrGegpaWsXQw1yzk3MzFOwVSgoyswrUVBRKM0rzy9KKQay0hRsVOwUIDwlQyM9YxMFE2MjPUMFA0MjBRBtrGcAwgZKEKMWLIDQAA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Roll-your-own-reverse, except short-circuiting to the normal one after encountering the decimal point: this doubles as implicit state tracking to check if there's a decimal point at all.</p>
+<p><a href="https://ato.pxeger.com/run?1=LYw_DoIwHEZ3T_FLQwKk0rTAYBrK4jHUoUj5E7E2LejCTVxIjNEreRslOHx531ve_dVId1Jd996h6GgMOjwqsX8OfRVtPnlNrLoq69SqBjcGcl3yhhdhFjkjdZD7xA-dkBg3vOQFxoiikWZMIEoQxu5f2Z5lq0GAsa3uwYNB3y62dL9XQeblsBhiMUlSSJOYMKAshpkJofMoWlLTtPAL" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Just reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern match the default case for which prepends <code>0.</code> instead.</p>
 </div>
 <div id="pu1" class="pu"><h1>Haskell, 93 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f=show.fst.foldl(#)(0,0)
