--- a/q/275522.html
+++ b/q/275522.html
@@ -39,7 +39,7 @@
 g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b++&quot;0&quot;|0&lt;1=&quot;0.&quot;++s
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LYw_DoIwHEZ3T_FLQwKk0rTAYBrK4jHUoUj5E7E2LejCTVxIjNEreRslOHx531ve_dVId1Jd996h6GgMOjwqsX8OfRVtPnlNrLoq69SqBjcGcl3yhhdhFjkjdZD7xA-dkBg3vOQFxoiikWZMIEoQxu5f2Z5lq0GAsa3uwYNB3y62dL9XQeblsBhiMUlSSJOYMKAshpkJofMoWlLTtPAL" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Just reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern match the default case for which prepends <code>0.</code> instead.</p>
+<p>Just reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern match the default case for which prepends <code>0.</code> as needed. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
 </div>
 <div id="pu1" class="pu"><h1>Haskell, 93 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f=show.fst.foldl(#)(0,0)
