--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>181</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>177</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
@@ -113,19 +113,18 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>,<sup><sub><sub><sup><sub> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> </sub></sup></sub></sub></sup>181 bytes</h1>
+<div id="pu0" class="pu"><h2><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub> <s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s> <s>191</s> <s>184</s> <s>181</s></sub></sup></sub></sub></sup> 177 bytes</h2>
 <pre><code>h;G;G
 :;s/.//;x;s/\s.*//
-:a;s/#*/&amp; &amp;/;T
-:b;x;s/^##/#/;x;ta
+:a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
 x;s/#\n#//;H;g;s/ ?//g;T
 s/\n##+\n/&amp;/;t
 s/^(#+)\n#\n(#*)#/\2\n\2\n\2&#9;\1/;h;t
 s/.*\n\n|#\n.*/#/;T
-h;x;s/.*&#9;//;x;s/&#9;#*$//;tb
+h;s/.*&#9;#//;x;s/&#9;#*$//;ta
 </code></pre>
-<p><a href="https://tio.run/##XVDLTsMwEDzXX1FpUZQ4qsdOyyNxVI7lA7jVVHJFlaQHF5EcQMCvE9bhoYqD5Z3d2RmP@8PjWB1sj61ZlA9ICI14hSmWq8ur65sS@reE6EEaJcEOka@BZmztxm5ExVAB9oVv1ysJiMpzTRLJPIG9F9V@Gu6IQJE3eBExuUC8d2cbBvNbVmQuawSi3AXw6sBwl1Kecc@FlGRGcIUL32fmDGw7kZTkRnhnEvtT9GwnSyVnPy@bkbzgctiPbPxmtNYf8Jy26njoUdd/ob026xg3VVnNuib1UmVKrtmZ9zuebDV/Vo6ERaLCMWY5V6D/CnSucBy1MKIQS7H6PD0N3Sn04@L5Cw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4)</a><br />
-<a href="https://tio.run/##XZDNTsMwEITP7FNUWilKHNVj95fEUTmWB@BWU8mIKk0PLiI5gBCvTlgXgSoOlne8M5@97g/PY31wPXZ2Wj0iY7T0DjubL5ar9W0F81uCerBBxXBD8hugHY9u67ZUi9SAe5Pd91oBVAepWSGbZHAPVD9dmntmcPINgZJmH1ly964VMbkToniFEZlLHyHRQeQ@57KQMx9zVgXDz3z8WTfewh0vJq0kwBgF@mGNMZ8IMkndCTigaf4GCsZu0ii5LhrJ2DwoXWi1Earc1klnZ@QjSmQCSYRTeuc1gf8T@JpwGg1ZmtGcFrSkFa2/zi9Dd479OH39Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7; calculate the powers but don't multiply them together)</a></p>
+<p><a href="https://tio.run/##XVDLTsMwEDzHX1FpUZQ4qtdOyyNxVY7lA3KrqWSJKkkPLiI5gIBfJ4zLQ1UPlnd2Z2c8HvZPU723A2/NvHrklLgVb2zKxfL65vauYv1XshiYNFfEdox8zdxOnd3YjagBFbN9xe0GJZlF7VGT5HSWsm1Okx0RUySNXkRMLhCWHmwLMLuHnG3ggS4VLjD2RsBdRkWOngsZyZzYlS78nMQZtt2JpCQa4QMkmMOjEV18kkzo91UJySuUo5/g@2601p/skbTuMfS8Wv0H9tqsY9RM5SvImsxLlSu5hjH2e0y2Gh9VcAqRqHCIUc4V6FKBzhUOkxZGlGIhll/H57E/hmGav3wD" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4)</a><br />
+<a href="https://tio.run/##XZDPasMwDMbP01MUBCFxqD87/Zs4dMfuAXqrVzCspOkhLUsOG2Ovvkzu2Cg7GOuT9P1kuT@@jNXR9djbafmMhNHQO2wxmy@Wq3UJ8xuCerBByXBD7DdAM57c1m2pEqkB9ya377UCqAoSs0IySeB2t8qBGRybhkBRs@9YTE@uETF5FJzbyQzJcu47iG8QeUg5zyTnu5RVxvCF737Og7dwp1uTVmJgjAL9sMaYTwRZo2oFHFDXf9sEYzdxj1RntXhsGpTOtNoIVaa1Utkb@YUciUAi4RzfeU/g/wS@J5xHQ5YKmtGcFrSk1dflOrSXrh@nr98" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7; calculate the powers but don't multiply them together)</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer.</p>
 <p>after two months and 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the initial PATTERN space:</p>
 <pre><code>add
