--- a/q/275522.html
+++ b/q/275522.html
@@ -26,22 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>062</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
-<tr d-ix="1"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
-<tr d-ix="2"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
-<tr d-ix="3"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
-<tr d-ix="4"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
-<tr d-ix="5"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
-<tr d-ix="6"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
+<tr d-ix="0"><td>100</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
+<tr d-ix="1"><td>062</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
+<tr d-ix="2"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
+<tr d-ix="3"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
+<tr d-ix="4"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
+<tr d-ix="5"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
+<tr d-ix="6"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
+<tr d-ix="7"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>65</s> 62 bytes</h1>
+<div id="pu0" class="pu"><h1>Python 3.12, 100 bytes</h1>
+<pre><code>def f(x):x=list(x+'.'*-~-('.'in x));t=x.index('.')-1;x[t:t+2]=x[t+1],x[t];return''.join(x)[::-1]+'0'
+</code></pre>
+<p><a href="https://tio.run/##JYzLCsMgFAV/RdyoNYqPrJR8SXCXSC3FBGvhdtNft7dkMzOcxTk//X5UP8a2Z5I5iADLs7w6B8k0u6mv4uhSCQgR@wK61G2H/yaUjbD20KVLC4a0aUKl2Pb@bpUx/ThKxcc1BGWTZIaNfDRSCL5xap32M53o7J22aGMd8mqvzUVDRThbqZ1nXoQYPw" rel="nofollow noreferrer">Try it online!</a></p>
+<p>Inputs and outputs valid strings. First, checks if &quot;.&quot; is in the string, if not it is added to the end. Then, switches the &quot;.&quot; with whatever character is before it. Then returns the string reversed, adding a &quot;0&quot; to the end.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>65</s> 62 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>g.reverse
 g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b++&quot;0&quot;|0&lt;1=&quot;0.&quot;++s
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=LYw_DoIwHEZ3T_FLQwKk0rTAYBrK4jHUoUj5E7E2LejCTVxIjNEreRslOHx531ve_dVId1Jd996h6GgMOjwqsX8OfRVtPnlNrLoq69SqBjcGcl3yhhdhFjkjdZD7xA-dkBg3vOQFxoiikWZMIEoQxu5f2Z5lq0GAsa3uwYNB3y62dL9XQeblsBhiMUlSSJOYMKAshpkJofMoWlLTtPAL" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Just reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern match the default case for which prepends <code>0.</code> as needed. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
+<p>Just reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern guard, prepending <code>0.</code> as needed if there is no decimal point. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
 </div>
-<div id="pu1" class="pu"><h1>Haskell, 93 bytes</h1>
+<div id="pu2" class="pu"><h1>Haskell, 93 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f=show.fst.foldl(#)(0,0)
 x#'.'=x$&gt;1
 (x,0)#y=(x/10+g y,0)
@@ -60,7 +67,7 @@ g=read.pure
 </li>
 </ul>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
 <pre><code>nkŻœ|¥ɗ”.Ṛ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z8v@@juo5NrDi09Of1Rw1y9hztn/X@4Y9Ph9kdNa7z//zc00jM2UTAxNtIzVDAwNFIA0cZ6BiBsAAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -86,7 +93,7 @@ p              Pair element(s) of the input with '.'
           0    Print all that and return 0.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Haskell, 85 bytes</h1>
+<div id="pu4" class="pu"><h1>Haskell, 85 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f x|elem '.'x=g x&quot;0&quot;|True=g(x++&quot;.&quot;)&quot;0&quot;
 g(x:'.':y)z=g y$x:'.':z
 g(x:y)z=g y$x:z
@@ -101,7 +108,7 @@ g[]z=z
 <li>with the guard <code>elem '.'x</code> we can add the decimal point to the input if it is missing</li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
 <pre><code>Ｉ⍘Ｓ·¹
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwymxODW4BMhP1/DMKygtgbI1dRQM9Aw1NTWt//83NNIzNvmvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -113,7 +120,7 @@ g[]z=z
 </code></pre>
 <p>When converting a string &quot;from&quot; a numeric base, Charcoal interprets the characters <code>0-9a-zA-Z</code> as integers from <code>0</code> to <code>61</code> and then computes the polynomial with the given input base.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
 <pre><code>$
 .
 D`\.
@@ -155,7 +162,7 @@ V`\..
 </code></pre>
 <p><a href="https://tio.run/##K0otycxLNPyvH5OirRGjByQ17fXjNdwT/qtw6XG5JMTocYUlAFGMnh5XjJ4K1///hkZ6xiYKNrZ2CibGRnqGXAaGRmAeiG2sZwBmA2kDAA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link is to test suite that converts any match of <code>/\d+(\.\d+)?/</code> in the input.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
 <pre><code>\./0J2Ẏ÷$ṫ$\0∴WRIṠ\.j
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiXFwuLzBKMuG6jsO3JOG5qyRcXDDiiLRXUknhuaBcXC5qIiwiIiwiXCIxOFwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
