--- a/q/275514.html
+++ b/q/275514.html
@@ -26,23 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>145</td><td>Zsh extendedglob in xterm</td><td>240914T222714Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275539#275539">GammaFun</a></td></tr>
-<tr d-ix="1"><td>080</td><td>C in an xterm</td><td>240914T140341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275532#275532">G. Sliep</a></td></tr>
+<tr d-ix="0"><td>079</td><td>C in an xterm</td><td>240914T140341Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275532#275532">G. Sliep</a></td></tr>
+<tr d-ix="1"><td>141</td><td>Zsh extendedglob in xterm</td><td>240914T222714Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275539#275539">GammaFun</a></td></tr>
 <tr d-ix="2"><td>079</td><td>JavaScript ES6</td><td>240913T162228Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275516#275516">Arnauld</a></td></tr>
 <tr d-ix="3"><td>039</td><td>Z80 Machine Code</td><td>240914T055429Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275525#275525">v-rob</a></td></tr>
 <tr d-ix="4"><td>033</td><td>Charcoal</td><td>240913T163742Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275517#275517">Neil</a></td></tr>
 <tr d-ix="5"><td>035</td><td>Perl 5 + pF M5.10.0</td><td>240913T150923Z</td><td><a href="https://codegolf.stackexchange.com/questions/275514/ascii-2d-landscape/275515#275515">Dom Hast</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> <code>--extendedglob</code> in xterm, 145 bytes</h1>
+<div id="pu0" class="pu"><h1>C (in an xterm), <s>80</s> 79 bytes</h1>
+<pre><code>l(char*s){for(puts(&quot;\e[2J\e[99B&quot;);*s;)printf(&quot;/\e[A\0\e[B\\\0_&quot;+(1^*s++&amp;3)*5);}
+</code></pre>
+<p>Clears the terminal and draws a landscape at the bottom of the screen:
+<a href="https://i.sstatic.net/4h8XK5AL.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/4h8XK5AL.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> <code>--extendedglob</code> in xterm, 141 bytes</h1>
 <p>Inspired by <a href="https://codegolf.stackexchange.com/a/275532/86147">G. Sliepen's C answer</a>, but fixed to follow <code>us</code> → <code>/‾</code> and make <code>ud</code>/<code>du</code> not unnecessarily switch lines.</p>
 <p>For fairness, this also sends <code>\e[2J\e[99B</code> to clear screen and move cursor down 99 lines, just as in their answer.</p>
 
-<pre class="lang-sh prettyprint-override"><code>printf $'\e[2J\e[99B'
+<pre class="lang-sh prettyprint-override"><code>&lt;&lt;&lt;$'\e[2J\e[99B'
 m=(u '\e[A' d '\e[B')
 for c
 printf ${${c#[^$v]}:+$m[1+m[(i)$c]]}${${${c/u//}/d/\\}/s/${${${v#d}:+‾}:-_}}&amp;&amp;v=${${c#s}:-$v}
 </code></pre>
-<p><a href="https://tio.run/##NYxNCoMwEIX3OUXAoAkiod0ZcFGXvYLaQp3YCvUHY6RUBnqyHqYXsbFSHswM35v3nua2GD12/Uj1Y9QtaLjeuwupuOBLP9TtWFEW5DrbH92I4zQgTcItXdEhoPA70kCQqhtoSf6Jmc2ll53YVKAKWZPtwibjtWBlUeBqOltaKVGCzHOURm5w8sD9f15vVNEZ0fenZKsyDrAJF0HI2s6NUkJF1oKTNU7WAJh1WcDlCw" rel="nofollow noreferrer" title="Zsh – Try It Online">Don't try it online, it doesn't work there!</a></p>
+<p><a href="https://tio.run/##JYxdCoMwEITfc4pAgyaIhPbNoA/1sVdQW6gbW6H@YIyUykJP1sP0IjZWBnaWb4Z5mfti9Nj1I9XPUbeg4fborqTigi9xHDM/19nh5E4UpT5pEm7pio4@hf@T@oJU3UBL0g91O1aUzWwud9mZTQWqgDXZPmgyXgtWFgWuoYullRIlyDxHaeQGpx24/vf9QRVeED1vSrYp4wCbcBGErOvcKCVUaC04WeNkDYBZzQIuPw" rel="nofollow noreferrer" title="Zsh – Try It Online">Don't try it online, it doesn't work there!</a></p>
 <hr />
 <h1><s><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> <code>--extendedglob</code> in xterm, 78 bytes</h1>
 <p>Same idea as <a href="https://codegolf.stackexchange.com/a/275532/86147">G. Sliepen's C answer</a>, both of our answers don't follow spec for <code>us</code> → <code>/‾</code>. ~~I think I have an idea to fix it though.</s> EDIT: See above.</p>
@@ -51,12 +57,6 @@ printf ${${c#[^$v]}:+$m[1+m[(i)$c]]}${${${c/u//}/d/\\}/s/${${${v#d}:+‾}:-_}}&a
 &lt;&lt;&lt;$'\e[2J\e[99B'${1//(#m)?/$m[m[(i)$MATCH]+1]}
 </code></pre>
 <p><a href="https://tio.run/##qyrO@F@cWpJfUKKQWlGSmpeSmpKek5/ElaahqfE/11ajVEFFXT8mNdpRXSEFyASynGJi1BWKFeI1uWxsbMAiRl5AwtLSSV2l2lBfX0M5V9NeXyU3OjdaI1NTxdcxxNkjVtswtva/JhdXmkJpaQoQlhYDYWkxmJHyHwA" rel="nofollow noreferrer" title="Zsh – Try It Online">Don't try it online, it doesn't work there!</a></p>
-</div>
-<div id="pu1" class="pu"><h1>C (in an xterm), 80 bytes</h1>
-<pre><code>l(char*s){puts(&quot;\e[2J\e[99B&quot;);for(;*s;)printf(&quot;/\e[A\0\e[B\\\0_&quot;+(1^*s++&amp;3)*5);}
-</code></pre>
-<p>Clears the terminal and draws a landscape at the bottom of the screen:
-<a href="https://i.sstatic.net/4h8XK5AL.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/4h8XK5AL.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript (ES6), 79 bytes</h1>
 <p><em>-8 thanks to <a href="https://codegolf.stackexchange.com/users/44718/tsh">@tsh</a></em></p>
