--- a/q/275527.html
+++ b/q/275527.html
@@ -26,11 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>014</td><td>Google Sheets</td><td>240915T071159Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275543#275543">doubleun</a></td></tr>
-<tr d-ix="1"><td>102</td><td>C clang</td><td>240914T090748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275530#275530">Neil</a></td></tr>
-<tr d-ix="2"><td>061</td><td>Python 3</td><td>240914T073427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275528#275528">Redz</a></td></tr>
+<tr d-ix="0"><td>065</td><td>Assembly nasm</td><td>240915T121602Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275545#275545">Neil</a></td></tr>
+<tr d-ix="1"><td>014</td><td>Google Sheets</td><td>240915T071159Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275543#275543">doubleun</a></td></tr>
+<tr d-ix="2"><td>102</td><td>C clang</td><td>240914T090748Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275530#275530">Neil</a></td></tr>
+<tr d-ix="3"><td>061</td><td>Python 3</td><td>240914T073427Z</td><td><a href="https://codegolf.stackexchange.com/questions/275527/branchless-median-of-5/275528#275528">Redz</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Google Sheets, 14 bytes (non-competing)</h1>
+<div id="pu0" class="pu"><h1><a href="http://www.nasm.us/" rel="nofollow noreferrer">Assembly (nasm, x64, Linux)</a>, 65 bytes</h1>
+<pre><code>0:  39 f7                   cmp     edi, esi
+2:  41 89 f1                mov     r9d, esi
+5:  44 0f 4c cf             cmovl   r9d, edi
+9:  0f 4f f7                cmovg   esi, edi
+c:  44 39 c1                cmp     ecx, r8d
+f:  44 89 c0                mov     eax, r8d
+12: 0f 4c c1                cmovl   eax, ecx
+15: 44 0f 4f c1             cmovg   r8d, ecx
+19: 41 39 c1                cmp     r9d, eax
+1c: 41 0f 4f c1             cmovg   eax, r9d
+20: 44 39 c6                cmp     esi, r8d
+23: 44 0f 4c c6             cmovl   r8d, esi
+27: 41 39 d0                cmp     r8d, edx
+2a: 89 d1                   mov     ecx, edx
+2c: 41 0f 4c c8             cmovl   ecx, r8d
+30: 44 0f 4e c2             cmovle  r8d, edx
+34: 41 39 c0                cmp     r8d, eax
+37: 41 0f 4c c0             cmovl   eax, r8d
+3b: 39 c1                   cmp     ecx, eax
+3d: 0f 4f c1                cmovg   eax, ecx
+40: c3                      ret             
+</code></pre>
+<p><a href="https://tio.run/##ZVPLboMwELzzFXssEq3SG0nEsd9R@aXUEo8Iu5H79dS7Xhw7cDEaz@7OzIJwzkxy/HufhZs2Z5S3ywwf3gTfQHxu4yLFCN/Oi9U36bjQzbQ88IBVhA4@a0hG6ESQnT1B/emHTrjCV7C@mYy2Yr5sCKnpTlcR6sA4GznuTXSyRQQGEAQOIOshZ03sJrVYHmMGNbaIr1Q7wGTn2A5km6k3nObsTuX2SBWhorIwFf2svSZhujMtIpGtCRzAVMKMSOxKGIFYdcVXqk3CUG8tLJbuVG7PwkrqvchABE5Mt9k1D6kdk7CzrjUkx/rFMYazO5bkmDMqHefUe70vLl1LNiePiomqAzdWba5AcABVR4nBx4s6yuc20hqKaeoZ5WiqaWmMYscltRTGUSqKkiteoxyLHecoFWtQxyjJgygc76q58rij8js5Kl5N@qXyc0Xod51Bbds/" rel="nofollow noreferrer" title="Assembly (nasm, x64, Linux) – Try It Online">Try it online!</a> No test harness yet, but it does assemble.</p>
+</div>
+<div id="pu1" class="pu"><h1>Google Sheets, 14 bytes (non-competing)</h1>
 <pre><code>=median(A1:E1)
 </code></pre>
 <p>Put five positive 32-bit integers in cells <code>A1:E1</code> and the formula in <code>F1</code>.</p>
@@ -38,7 +64,7 @@
 <p>The rules specify <em>&quot;any programming language of your choosing&quot;</em> and say nothing about built-ins, which kind of defeats the purpose.</p>
 <p>It is unclear how to verify <em>&quot;no if statements or jumps in your code or anything that would translate to an if statement or jump at the cpu level.&quot;</em> There are no branches in the &quot;code&quot; above, but I would welcome an attempt to check the code output by V8 or any other Google Sheets runtime environment in any web browser.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>105</s> 102 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="http://clang.llvm.org/" rel="nofollow noreferrer">C (clang)</a>, <s>105</s> 102 bytes</h1>
 <pre class="lang-c prettyprint-override"><code>#define s(x,y)x&gt;y?f=x,x=y,y=f:y;
 f;int m(a,b,c,d,e){s(a,b)s(d,e)s(a,d)s(b,e)s(b,c)s(c,d)return s(b,c)}
 </code></pre>
@@ -68,7 +94,7 @@ f;int m(a,b,c,d,e){s(a,b)s(d,e)s(a,d)s(b,e)s(b,c)s(c,d)return s(b,c)}
 </code></pre>
 <p>Note that clang optimises away the obviously useless last assignments to each of <code>a</code>, <code>e</code>, <code>d</code> and <code>b</code> which is why those swaps are only two lines and not four.</p>
 </div>
-<div id="pu2" class="pu"><h1>Python 3, 61 bytes</h1>
+<div id="pu3" class="pu"><h1>Python 3, 61 bytes</h1>
 <pre><code>x=[]
 for i in[0]*5:x.append(int(input()))
 print(sorted(x)[2])
