--- a/q/275522.html
+++ b/q/275522.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
 <tr d-ix="1"><td>100</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
 <tr d-ix="2"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
 <tr d-ix="3"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
@@ -35,12 +35,12 @@
 <tr d-ix="6"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="7"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>68</s> 67 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>68</s> <s>67</s> 64 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>g.reverse.('0':)
-g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b|h:t&lt;-s=h:'.':t
+g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b|0&lt;1=g$'.':s
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ0W0km5yQYFS7OI025ilpSVpuhY3ndP1ilLLUouKU_U01A3UrTS50hWKazQSdVKsMqySNG10iwsS8zTs1PXUNYttE7W1M6xSrJJqMqxKgDK2GVZAcasSqFGuuYmZeQq2CgVFmXklCioKpXnl-UUpxUBWmoKNip0ChKdkaKRnbKJgYmykZ6hgYGikAKKN9QxA2EDBUAli2IIFEBoA" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Just prepends a leading 0, reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern guard, or inserting a new one if needed. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
+<p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ0W0km5yQYFS7OI025ilpSVpuhY3HdL1ilLLUouKU_U01A3UrTS50hWKazQSdVKsMqySNG10iwsS8zTs1PXUNYttE7W1M6xSrJJqDGwMbdNVgIJWxVBzXHMTM_MUbBUKijLzShRUFErzyvOLUoqBrDQFGxU7BQhPydBIz9hEwcTYSM9QwcDQSAFEG-sZgLCBgqESxLAFCyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Just prepends a leading 0, reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern guard--trying again with one prepended if needed. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
 </div>
 <div id="pu1" class="pu"><h1>Python 3.12, 100 bytes</h1>
 <pre><code>def f(x):x=list(x+'.'*-~-('.'in x));t=x.index('.')-1;x[t:t+2]=x[t+1],x[t];return''.join(x)[::-1]+'0'
