--- a/q/275546.html
+++ b/q/275546.html
@@ -29,8 +29,12 @@
 <tr d-ix="0"><td>040</td><td>regex</td><td>240916T003948Z</td><td><a href="https://codegolf.stackexchange.com/questions/275546/not-great-at-regexs-trying-to-code-golf-this-beast-of-a-regex-without-using-str/275547#275547">guest430</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1>regex, 40 bytes</h1>
-<p><code>/^(\d*)[:|,.](\d*)[:|,.](\d*)[:|,.](\d*)$/gm</code></p>
-<p><a href="https://regex101.com/r/6i6flq/1" rel="nofollow noreferrer">try it online!</a></p>
+<p><code>^(\d*)[:|,.](\d*)[:|,.](\d*)[:|,.](\d*)$</code><br />
+<a href="https://regex101.com/r/6i6flq/1" rel="nofollow noreferrer">try it online!</a></p>
+<p>or if you'll allow all the delimers to be exactly the same, this is even better:</p>
+<h1>regex, 34 bytes</h1>
+<p><code>^(\d*)([:|,.])(\d*)\2(\d*)\2(\d*)$</code><br />
+<a href="https://regex101.com/r/xZ9KwE/1" rel="nofollow noreferrer">try it online!</a></p>
 </div>
 
 <table id="st">
