--- a/q/275546.html
+++ b/q/275546.html
@@ -35,6 +35,10 @@
 <h1>regex, 34 bytes</h1>
 <p><code>^(\d*)([:|,.])(\d*)\2(\d*)\2(\d*)$</code><br />
 <a href="https://regex101.com/r/xZ9KwE/1" rel="nofollow noreferrer">try it online!</a></p>
+<p>lessons that can be learned:<br />
+in general, regex tends to be simpler than you think it is. often, if you're thinking of including a non-capturing group, it's easier to just get rid of the group altogether; non-capturing groups don't increase the 'power' of a regex at all (ie, there is no pattern a non-capturing group lets you capture that you couldn't have already matched without it).<br />
+also, you should only use <code>|</code> alternation for exact strings; <code>[]</code> character classes are much easier to use for individual characters. additionally, alternation can be very slow in terms of big-O if you have <code>*</code> or <code>+</code> counts on the individual elements.<br />
+finally, if you're using <code>?</code> for a group, rethink about why you want that group in the first place. it's often easier to read a regex with less groups where each element has its count directly following it and allowing groups to match without a specified count.</p>
 </div>
 
 <table id="st">
