--- a/q/272560.html
+++ b/q/272560.html
@@ -26,12 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>126</td><td>Python 3 sympy</td><td>240416T225257Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272629#272629">CursorCo</a></td></tr>
-<tr d-ix="1"><td>074</td><td>Wolfram Language Mathematica</td><td>240416T020143Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272615#272615">att</a></td></tr>
-<tr d-ix="2"><td>009</td><td>05AB1E</td><td>240414T084259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272563#272563">Neil</a></td></tr>
-<tr d-ix="3"><td>082</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
+<tr d-ix="0"><td>068</td><td>Python 3 sympy</td><td>240916T084624Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/275549#275549">David Ch</a></td></tr>
+<tr d-ix="1"><td>126</td><td>Python 3 sympy</td><td>240416T225257Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272629#272629">CursorCo</a></td></tr>
+<tr d-ix="2"><td>074</td><td>Wolfram Language Mathematica</td><td>240416T020143Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272615#272615">att</a></td></tr>
+<tr d-ix="3"><td>009</td><td>05AB1E</td><td>240414T084259Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272563#272563">Neil</a></td></tr>
+<tr d-ix="4"><td>082</td><td>JavaScript V8</td><td>240414T074951Z</td><td><a href="https://codegolf.stackexchange.com/questions/272560/output-a-1-2-3-5-7-sequence/272561#272561">l4m2</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3 (sympy)</a>, 126 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3 (sympy)</a>, 68 bytes</h1>
+
+<pre class="lang-python prettyprint-override"><code>from sympy import*;j=2;print(1)
+while 1:print(j*prevprime(j+1));j+=1
+</code></pre>
+<p><a href="https://tio.run/##K6gsycjPM/7/P60oP1ehuDK3oFIhM7cgv6hEyzrL1si6oCgzr0TDUJOrPCMzJ1XB0AoikKVVUJRaBmTnpmpkaRtqalpnadsa/v8PAA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
+<p><code>1</code> is an edge case. <code>j</code> counts all positive integers <code>&gt;1</code>, then <code>j*prevprime(j+1)=j*p(n)</code> will always be a prime <code>p(n)</code> multiplied by <code>j</code> where <code>p(n+1)&gt;j&gt;=p(n)</code>. Thus, the prime factors of <code>j</code> will always be <code>&lt;=p(n)</code>, and so <code>p(n)</code> is never multiplied by a lone prime <code>&lt;p(n)</code> or <code>&gt;p(n)</code>. Additionally, each composite <code>j</code> is multiplied by a unique prime. Thus, there are no cases where any number is multiplied by more than one lone prime. Similar idea works with <code>nextprime(j-1)</code>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3 (sympy)</a>, 126 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>from sympy import*
 s=[]
@@ -50,14 +59,14 @@ while 1:
 <p>So what about the answers to the additional math problems? Well if we look back through the proof we'll note that there's nothing particularly special about adding <span class="math-container">\$i \cdot p_i \$</span>. In fact we should be able to choose any prime in place of <span class="math-container">\$p_i\$</span> so long as it is greater than <span class="math-container">\$i\$</span> and greater than the last prime we chose. This means that since there are infinite primes, we have infinite choices for what number to add each time we add a number to the sequence. Specifically, we make a countably infinite number of choices each with a countably infinite number of valid options, meaning we can construct an uncountably infinite number of valid sequences in this way. Note that this method is not exhaustive, and there are valid sequences which cannot be constructed in this way as well.</p>
 <p>As for the second question, since the natural density of the primes is 0, any valid sequence constructed using the method described here will also have a natural density of 0 since the sequence will be more sparse than the primes by the nature of the construction.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 74 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 74 bytes</h1>
 <pre><code>f@n_:=f/;!Or@@CompositeQ/@NumeratorDenominator[i/n]=Print@n
 f@i~Do~{i,∞}
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78/z/NIS/eyjZN31rRv8jBwTk/tyC/OLMkNVDfwa80N7UosSS/yCU1Lz83Mw/EjM7Uz4u1DSjKzCtxyONKc8isc8mvq87UedQxr/b/fwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Greedy algorithm. Outputs (certain products of distinct primes)*(all squares) indefinitely. Appears to be equivalent to <a href="https://codegolf.stackexchange.com/a/272561">l4m2's solution</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 9 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E" rel="nofollow noreferrer">05AB1E</a>, <s>11</s> 9 bytes</h1>
 <pre><code>∞ʒÓ2ôÆƶO_
 </code></pre>
 <p><a href="https://tio.run/##ARoA5f9vc2FiaWX//@KInsqSw5Myw7TDhsa2T1///w" rel="nofollow noreferrer" title="05AB1E – Try It Online">Try it online!</a> Outputs the infinite sequence (well on TIO it will time out after about <code>18000</code>). Explanation: Port of @att's formula (numbers where the dot product of the prime factorisation exponents with the sequence of nonzero integers in order of absolute value is zero). Edit: Saved 2 bytes thanks to @KevinCruijssen.</p>
@@ -70,7 +79,7 @@ f@i~Do~{i,∞}
        O_   Has zero sum
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://v8.dev/" rel="noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://v8.dev/" rel="noreferrer">JavaScript (V8)</a>, 82 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>for(i=0,g=x=&gt;x%k?k&lt;i&amp;&amp;g(x,g[-i%k++||i]=z+=!g[k]):z^g(x/k);k=2;z=1)g(++i)||print(i)
 </code></pre>
