--- a/q/275522.html
+++ b/q/275522.html
@@ -26,17 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>061</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
-<tr d-ix="1"><td>088</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
-<tr d-ix="3"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
-<tr d-ix="4"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
-<tr d-ix="5"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
-<tr d-ix="6"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
-<tr d-ix="7"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
-<tr d-ix="8"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
+<tr d-ix="0"><td>012</td><td>05AB1E</td><td>240916T085006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275550#275550">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>061</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
+<tr d-ix="2"><td>088</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
+<tr d-ix="4"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
+<tr d-ix="5"><td>010</td><td>Jelly</td><td>240914T142247Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275533#275533">Unrelate</a></td></tr>
+<tr d-ix="6"><td>085</td><td>Haskell</td><td>240914T131444Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275531#275531">DPD-</a></td></tr>
+<tr d-ix="7"><td>005</td><td>Charcoal</td><td>240914T055735Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275526#275526">Neil</a></td></tr>
+<tr d-ix="8"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
+<tr d-ix="9"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>þRT*I'.«¤k°/
+</code></pre>
+<p><a href="https://tio.run/##yy9OTMpM/f//8L6gEC1Pdb1Dqw8tyT60Qf//fwNDIwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/w/uCQrQq1fUOrT60JPvQBv3/Ov@jDY2M9UxMdRQMjfSMTXQUTIyN9Ax1FJQMDI2UdBTAbGM9A6AAkDRQigUA" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>þ        # Remove a potential &quot;.&quot; from the (implicit) input by only keeping digits
+ R       # Reverse it
+  T*     # Multiply by 10 to add a trailing 0
+I        # Push the input again
+ '.«    '# Append a trailing &quot;.&quot;
+    ¤    # Push its tail (without popping): the &quot;.&quot;
+     k   # Pop both, and push the first (0-based) index of &quot;.&quot;
+      °  # Take 10 to the power this index
+/        # Divide the earlier number by this
+         # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r'(\d)(\.|$)',r'.\1',x,1)[::-1]+'0'
 import re
 </code></pre>
@@ -46,7 +65,7 @@ import re
 <pre class="lang-js prettyprint-override"><code>s=&gt;[...s.replace(/(\d)(\.|$)/,'.$1')].reduce((p,q)=&gt;q+p,'0')
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>Python 3.12, <s>100</s> <s>92</s> 88 bytes</h1>
+<div id="pu2" class="pu"><h1>Python 3.12, <s>100</s> <s>92</s> 88 bytes</h1>
 <pre><code>def f(x):*x,=*x,*{d:='.'}-{*x};t=x.index(d)-1;x[t:t+2]=d,x[t];return''.join(x)[::-1]+'0'
 </code></pre>
 <p>(Old version: <a href="https://tio.run/##JYzLCsMgFAV/RdyoNYqPrJR8SXCXSC3FBGvhdtNft7dkMzOcxTk//X5UP8a2Z5I5iADLs7w6B8k0u6mv4uhSCQgR@wK61G2H/yaUjbD20KVLC4a0aUKl2Pb@bpUx/ThKxcc1BGWTZIaNfDRSCL5xap32M53o7J22aGMd8mqvzUVDRThbqZ1nXoQYPw" rel="nofollow noreferrer">Try it online!</a>)</p>
@@ -54,14 +73,14 @@ import re
 <p>-4 bytes thanks to STerliakov: <a href="https://ato.pxeger.com/run?1=NY4xCsMgGIWvIi5qEkVNh2KQXqMQshmpHUyQP2AJOUmXLO2depsKaYf33jd9vOd7fsBtivv-WsDz8-fqRo88zcxUubEl1eqMJYJsfK3y1oHNIkQ3ZuoYV13uwUCtB-uagkOXRlhSJETcpxCLpTeGq6Emkvz8Fz8lFFCIiGKlRXvCDT61WqiyUunSB7dCHi0xM3MKEaingbFD87_7BQ" rel="nofollow noreferrer">Try it online!</a></p>
 <p>Inputs and outputs valid strings. <s>First, checks if &quot;.&quot; is in the string, if not it is added to the end</s> First, converts the string to a list, adding &quot;.&quot; to the end if it isn't already present. Then, switches the &quot;.&quot; with whatever character is before it. Then returns the string reversed, adding a &quot;0&quot; to the end for cases like &quot;2.1&quot;.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>68</s> <s>67</s> 64 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.haskell.org" rel="nofollow noreferrer">Haskell</a>, <s>68</s> <s>67</s> 64 bytes</h1>
 <pre class="lang-haskell prettyprint-override"><code>g.reverse.('0':)
 g s|(a,d:h:b)&lt;-span(&gt;'.')s=a++h:d:b|0&lt;1=g$'.':s
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m708I7E4OzUnZ0W0km5yQYFS7OI025ilpSVpuhY3HdL1ilLLUouKU_U01A3UrTS50hWKazQSdVKsMqySNG10iwsS8zTs1PXUNYttE7W1M6xSrJJqDGwMbdNVgIJWxVBzXHMTM_MUbBUKijLzShRUFErzyvOLUoqBrDQFGxU7BQhPydBIz9hEwcTYSM9QwcDQSAFEG-sZgLCBgqESxLAFCyA0AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Just prepends a leading 0, reverses the whole thing, then surgically inverts the decimal point back ahead of the ones place with a fallible pattern guard--trying again with one prepended if needed. This is done <em>after</em> reversing so that the pattern match can extract the ones place as the <em>second</em> element of the suffix containing the decimal point instead of having to use functions to extract it as the <em>last</em> element of the prefix before it.</p>
 </div>
-<div id="pu3" class="pu"><h1>Haskell, 93 bytes</h1>
+<div id="pu4" class="pu"><h1>Haskell, 93 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f=show.fst.foldl(#)(0,0)
 x#'.'=x$&gt;1
 (x,0)#y=(x/10+g y,0)
@@ -80,7 +99,7 @@ g=read.pure
 </li>
 </ul>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 10 bytes</h1>
 <pre><code>nkŻœ|¥ɗ”.Ṛ
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z8v@@juo5NrDi09Of1Rw1y9hztn/X@4Y9Ph9kdNa7z//zc00jM2UTAxNtIzVDAwNFIA0cZ6BiBsAAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -106,7 +125,7 @@ p              Pair element(s) of the input with '.'
           0    Print all that and return 0.
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h1>Haskell, 85 bytes</h1>
+<div id="pu6" class="pu"><h1>Haskell, 85 bytes</h1>
 <pre class="lang-hs prettyprint-override"><code>f x|elem '.'x=g x&quot;0&quot;|True=g(x++&quot;.&quot;)&quot;0&quot;
 g(x:'.':y)z=g y$x:'.':z
 g(x:y)z=g y$x:z
@@ -121,7 +140,7 @@ g[]z=z
 <li>with the guard <code>elem '.'x</code> we can add the decimal point to the input if it is missing</li>
 </ul>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 5 bytes</h1>
 <pre><code>Ｉ⍘Ｓ·¹
 </code></pre>
 <p><a href="https://tio.run/##S85ILErOT8z5/z@gKDOvRMM5sbhEwymxODW4BMhP1/DMKygtgbI1dRQM9Aw1NTWt//83NNIzNvmvW5YDAA" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -133,7 +152,7 @@ g[]z=z
 </code></pre>
 <p>When converting a string &quot;from&quot; a numeric base, Charcoal interprets the characters <code>0-9a-zA-Z</code> as integers from <code>0</code> to <code>61</code> and then computes the polynomial with the given input base.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 30 bytes</h1>
 <pre><code>$
 .
 D`\.
@@ -175,7 +194,7 @@ V`\..
 </code></pre>
 <p><a href="https://tio.run/##K0otycxLNPyvH5OirRGjByQ17fXjNdwT/qtw6XG5JMTocYUlAFGMnh5XjJ4K1///hkZ6xiYKNrZ2CibGRnqGXAaGRmAeiG2sZwBmA2kDAA" rel="nofollow noreferrer" title="Retina – Try It Online">Try it online!</a> Link is to test suite that converts any match of <code>/\d+(\.\d+)?/</code> in the input.</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, <sup>(04.41)</sup> 144 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, <sup>(08.1)</sup> 18 bytes</h1>
 <pre><code>\./0J2Ẏ÷$ṫ$\0∴WRIṠ\.j
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiXFwuLzBKMuG6jsO3JOG5qyRcXDDiiLRXUknhuaBcXC5qIiwiIiwiXCIxOFwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
