--- a/q/275522.html
+++ b/q/275522.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>05AB1E</td><td>240916T085006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275550#275550">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>061</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
+<tr d-ix="0"><td>059</td><td>Python</td><td>240916T010600Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548#275548">STerliak</a></td></tr>
+<tr d-ix="1"><td>012</td><td>05AB1E</td><td>240916T085006Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275550#275550">Kevin Cr</a></td></tr>
 <tr d-ix="2"><td>088</td><td>Python 3.12</td><td>240915T010906Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275542#275542">David Ch</a></td></tr>
 <tr d-ix="3"><td>064</td><td>Haskell</td><td>240914T191515Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275538#275538">Unrelate</a></td></tr>
 <tr d-ix="4"><td>093</td><td>Haskell</td><td>240914T143804Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275534#275534">DPD-</a></td></tr>
@@ -37,7 +37,19 @@
 <tr d-ix="8"><td>030</td><td>Retina 0.8.2</td><td>240914T055131Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275524#275524">Neil</a></td></tr>
 <tr d-ix="9"><td>nan</td><td>Vyxal</td><td>240914T043133Z</td><td><a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275523#275523">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, <s>61</s> 59 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda x:re.sub('(.)(\.|$)',r'.\1',x,1)[::-1]+'0'
+import re
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=LYzBCsIgGIDvPYVIoJL70W2HMKIHyQ4bTRKaijlY0Jt0EaLeqbdpYJfv-07f8xPu6eJdfpm9fk_JVNvv7tqN_blDs4oD3KaeEgqManisGeGRgJaEz1yyo1KVPG2IICs7Bh8TisN_cTA-IousQxTLGpoWc9w2NcjFQtYLSzcgCgVmKkTrEjXUMlY2ORf_AA" rel="nofollow noreferrer">Attempt this online!</a></p>
+<p>-2 thanks to <a href="https://codegolf.stackexchange.com/questions/275522/convert-base-10-to-base-0-1/275548?noredirect=1#comment592216_275548">emanresuA</a></p>
+<p>Original version: <a href="https://ato.pxeger.com/run?1=LYzBCsIgGIDvPYVIoJITdTsMYfQg2WFjk4Tmxp-DBb1JFyHqnXqbBnb5vu_0PT_zPV6mkF6use8luqL-Ntd27PoWrQYGcVs6CoTanlErHntGOBBhFeErV-xkTKHOByLJzo_zBBHB8J8c3QTIIx8QxUqLssIcV6UWarNUemPuUshMiZmZwYdIHfWM5U1K2T8" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Alternative regex-based approach: replace a first occurrence of a digit followed by decimal point or line end with a dot followed by that digit, then reverse and pad with zero.</p>
+<p>Usually JS is better at regex codegolfs (at least since you don't have to import anything), but it lacks advanced slicing, so I can't make it shorter than <s>60</s> 59 bytes (<a href="https://ato.pxeger.com/run?1=LYxNCoMwFISvEoKQ92j6TNRFoegNegLromhSBDH-7nqTbly00Cv1Nk2Jm5mBj_mer941ZvvUrp8XZvP3utjj6Xue86IkopkmM3S32kAMhHClR4SxFBRpgZVnzeoRDHLEvBgPgxRK4K64WDcxCN6WOctKrhNKMy55liakfSud-Aw7JRVS8QrZ_-Y6Q527g4UWd-m2hf4B" rel="nofollow noreferrer">ATO</a>):</p>
+<pre class="lang-js prettyprint-override"><code>s=&gt;[...s.replace(/(.)(\.|$)/,'.$1')].reduce((p,q)=&gt;q+p,'0')
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 12 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>þRT*I'.«¤k°/
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//8L6gEC1Pdb1Dqw8tyT60Qf//fwNDIwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfeX/w/uCQrQq1fUOrT60JPvQBv3/Ov@jDY2M9UxMdRQMjfSMTXQUTIyN9Ax1FJQMDI2UdBTAbGM9A6AAkDRQigUA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -53,16 +65,6 @@ I        # Push the input again
       °  # Take 10 to the power this index
 /        # Divide the earlier number by this
          # (after which the result is output implicitly)
-</code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 61 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>lambda x:re.sub(r'(\d)(\.|$)',r'.\1',x,1)[::-1]+'0'
-import re
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LYzBCsIgGIDvPYVIoJITdTsMYfQg2WFjk4Tmxp-DBb1JFyHqnXqbBnb5vu_0PT_zPV6mkF6use8luqL-Ntd27PoWrQYGcVs6CoTanlErHntGOBBhFeErV-xkTKHOByLJzo_zBBHB8J8c3QTIIx8QxUqLssIcV6UWarNUemPuUshMiZmZwYdIHfWM5U1K2T8" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>Alternative regex-based approach: replace a first occurrence of a digit followed by decimal point or line end with a dot followed by that digit, then reverse and pad with zero.</p>
-<p>Usually JS is better at regex codegolfs (at least since you don't have to import anything), but it lacks advanced slicing, so I can't make it shorter than 60 bytes (<a href="https://ato.pxeger.com/run?1=LYxNCoMwFISvEkIh79H0maiLLqo36AnURdGkCGL83fUm3bhooVfqbZoSNzMDH_M9X71rzPapXT8vzGbvdbGn8_cyZ3lBRDNNZuhutYEIygahpMcBIynooAVWHjarZzDIEbN8PA5SKIG742rdxCCIW-YsK7iOKUm55GkSk_atdOwz7IRUSMUrZP-b6wx17g4WWtyl2xb6Bw" rel="nofollow noreferrer">TIO</a>):</p>
-<pre class="lang-js prettyprint-override"><code>s=&gt;[...s.replace(/(\d)(\.|$)/,'.$1')].reduce((p,q)=&gt;q+p,'0')
 </code></pre>
 </div>
 <div id="pu2" class="pu"><h1>Python 3.12, <s>100</s> <s>92</s> 88 bytes</h1>
